--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "mongoose": "^6.5.1",
     "path": "^0.12.7"
   }
 }
