--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,7 @@
   "author": "Ellie de Oliveira",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "mongoose": "^6.5.1",
